# superaccumulators

./: CHANGELOG.md  README.md  superaccumulators.cabal
src/Numeric/: Superaccumulator.hs
