name:                superaccumulators
version:             0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/iu-parfunc/superaccumulators

library
  exposed-modules:     Numeric.Superaccumulator
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.3 && < 4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
